--- a/build_production/jednotlivci-provizorni/signature_finom-takac.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-takac.html
@@ -83,7 +83,7 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                 <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                  <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-reality_ktgfvi.png" width="80" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 80px;" alt="">
+                  <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641551789/finom_email-signature/logo/logo_finom-group_qsqysn.png" width="80" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 80px;" alt="">
                 </td>
               </tr>
             </table>
@@ -99,7 +99,7 @@
                       Jakub Takáč
                     </p>
                     <p style="margin: 0; font-size: 10px; font-weight: 300; text-transform: uppercase; letter-spacing: 1px;">
-                      BUSINESS DEVELOPMENT / PARTNER
+                      BUSINESS DEVELOPMENT | PARTNER | DEVELOPMENT
                     </p>
                     <p style="font-size: 11px; font-weight: 700;">
                       <a href="tel:+420 777 364 446;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
@@ -108,8 +108,8 @@
                       <a href="mailto:takac@finomgroup.cz;" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
                         takac@finomgroup.cz |
                       </a>
-                      <a href="https://finomreality.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                        finomreality.cz |
+                      <a href="https://finomgroup.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #b29f80; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                        finomgroup.cz |
                       </a>
                       <span class="sm-block sm-mt-8" style="margin-left: 2px;">
                         <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1636237019/finom_email-signature/icons/icon_fb_gmpsgi.png" width="14" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 14px;" alt="">
@@ -129,18 +129,18 @@
             <table class="sm-w-full" style="width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
               <tr>
                   <td class="sm-w-1-4 sm-px-0" style="width: 16.666667%; padding-left: 0; font-weight: 300; color: #262626;">
-                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1641814098/finom_email-signature/profile-antonovic_xmgirb.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
+                    <img src="https://res.cloudinary.com/patrik-vadura/image/upload/v1643888951/finom_email-signature/profile-takac_uwavwd.png" width="70" style="max-width: 100%; vertical-align: middle; line-height: 100%; border: 0; width: 70px;" alt="">
                   </td>
                 <td class="sm-w-3-4" style="width: 83.333333%; padding-left: 0; font-size: 10px; color: #a2a0a0;">
                   <p style="margin-bottom: 4px; font-weight: 700; text-transform: uppercase;">
-                    Finom Reality s.r.o.
+                    Finom Group a.s.
                   </p>
                   <p style="margin: 0;">
-                    Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomreality.cz;" style="font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none;">info@finomreality.cz</a>
+                    Stojanova 1334  |  686 01 Uherské Hradiště | <a href="mailto:info@finomgroup.cz;" style="font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none;">info@finomgroup.cz</a>
                   </p>
                   <p style="font-size: 11px; font-weight: 500; text-transform: uppercase;">
-                    <a href="https://www.finomreality.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
-                      www.finomreality.cz
+                    <a href="https://www.finomgroup.cz" style="font-size: inherit; mso-line-height-rule: exactly; font-weight: inherit; line-height: inherit; color: #a2a0a0; text-decoration: none; font-family: 'Lato', Helvetica, Arial, sans-serif;">
+                      www.finomgroup.cz
                     </a>
                   </p>
                 </td>
