--- a/build_production/jednotlivci-provizorni/signature_finom-cevorova.html
+++ b/build_production/jednotlivci-provizorni/signature_finom-cevorova.html
@@ -56,7 +56,7 @@
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #ffffff;">
   <div role="article" aria-roledescription="email" aria-label="Signature" lang="en">
-      <table class="sm-w-full" style="width: 600px; padding: 16px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
+      <table class="sm-w-full" style="width: 600px; font-family: ui-sans-serif, system-ui, -apple-system, 'Lato', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
         <tr>
           <td align="center">
             <table class="sm-w-full" style="margin-bottom: 24px; width: 600px;" cellpadding="0" cellspacing="0" role="presentation">
